<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/>
    </parent>

    <groupId>com.bipros</groupId>
    <artifactId>bipros-backend</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Bipros EPPM Backend</name>

    <repositories>
        <repository>
            <id>osgeo</id>
            <name>OSGeo Release Repository</name>
            <url>https://repo.osgeo.org/repository/release/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <modules>
        <module>bipros-common</module>
        <module>bipros-security</module>
        <module>bipros-project</module>
        <module>bipros-calendar</module>
        <module>bipros-activity</module>
        <module>bipros-scheduling</module>
        <module>bipros-resource</module>
        <module>bipros-cost</module>
        <module>bipros-evm</module>
        <module>bipros-baseline</module>
        <module>bipros-portfolio</module>
        <module>bipros-risk</module>
        <module>bipros-document</module>
        <module>bipros-udf</module>
        <module>bipros-contract</module>
        <module>bipros-reporting</module>
        <module>bipros-import-export</module>
        <module>bipros-integration</module>
        <module>bipros-admin</module>
        <module>bipros-gis</module>
        <module>bipros-api</module>
    </modules>

    <properties>
        <java.version>23</java.version>
        <maven.compiler.release>23</maven.compiler.release>
        <mapstruct.version>1.6.3</mapstruct.version>
        <jjwt.version>0.12.6</jjwt.version>
        <springdoc.version>2.8.4</springdoc.version>
        <testcontainers.version>1.20.4</testcontainers.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-project</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-calendar</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-activity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-scheduling</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-resource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-cost</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-evm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-baseline</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-portfolio</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-risk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-document</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-udf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-contract</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-reporting</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-import-export</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-admin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bipros</groupId>
                <artifactId>bipros-gis</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Common dependencies for ALL modules -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${java.version}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>0.2.0</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
